--- a/views/classes.handlebars
+++ b/views/classes.handlebars
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-8">
         <div class="panel-group" id="resultsPanel">
-            {{#each result}}
+            {{#each classes}}
                 {{> class-block}}
             {{/each}}
         </div>
