Notes are saving and showing

--- a/views/partials/class-block.handlebars
+++ b/views/partials/class-block.handlebars
@@ -16,8 +16,8 @@
                         <a href="{{link}}" target="_blank">{{name}}</a>
                     </li>
                     <li class="active notebadge" data-category="{{category}}" data-name="{{name}}">
-                        <a href="#" data-category="{{category}}" data-name="{{name}}">
-                            {{!-- Notes <span class="badge" data-category="{{category}}" data-name="{{name}}">{{notes.length}}
+                        <a href="#" data-category="{{category}}" data-name="{{name}}">Notes 
+                            {{!-- <span class="badge" data-category="{{category}}" data-name="{{name}}">{{notes.length}}
                             </span>  --}}
                         </a>
                     </li>
