--- a/views/classes.handlebars
+++ b/views/classes.handlebars
@@ -1,15 +1,16 @@
 <div class="row">
-    <div class="col-md-8">
+    <div class="col-sm-8">
         <div class="panel-group" id="resultsPanel">
             {{#each classes}}
                 {{> class-block}}
             {{/each}}
         </div>
-        <div class="col-md-4">
-            <p id="notes"></p>
+        </div>
+        <div class="col-sm-4">
+            <h2>Notes</h2>
+            {{> note-block blank}}
             {{#each notes}}
-                {{> note-block}}
+                {{> note-static-block}}
             {{/each}}
-                {{> note-block blank}}
         </div>
     </div>
