--- a/views/partials/class-block.handlebars
+++ b/views/partials/class-block.handlebars
@@ -28,11 +28,11 @@
     <div id="{{category}}{{name}}panel" class="panel-collapse collapse">
         <div class="panel-body">
             <a href="{{link}}">Link</a>
-            <br> {{description}}
-            <div class="btn-group">
+            <br>
+            {{description}}
+            {{!-- <div class="btn-group">
                 <button class="btn btn-default" type="button">Save
                 </button>
-                {{!--
                 <button class="btn btn-default" type="button">
                     <em class="glyphicon glyphicon-align-center"></em> Center
                 </button>
@@ -41,8 +41,8 @@
                 </button>
                 <button class="btn btn-default" type="button">
                     <em class="glyphicon glyphicon-align-justify"></em> Justify
-                </button> --}}
-            </div>
+                </button>
+            </div> --}}
         </div>
     </div>
 </div>
