notes collapse instead of turn invisible

--- a/views/partials/newnote-block.handlebars
+++ b/views/partials/newnote-block.handlebars
@@ -1,5 +1,5 @@
 
-<form class="form-horizontal hideablenotes {{name}}{{category}}note invisible" role="form" data-id="{{_id}}">
+<form class="form-horizontal hideablenotes {{name}}{{category}}note collapse" role="form" data-id="{{_id}}">
     <div class="form-group">
         <input type="email" class="form-control" id="inputtitle{{name}}{{category}}" placeholder="Note Title" value="{{title}}" data-id="{{_id}}"/>
     </div>
