--- a/views/partials/note-static-block.handlebars
+++ b/views/partials/note-static-block.handlebars
@@ -1,4 +1,4 @@
-<form class="form-horizontal hideablenotes {{name}}{{category}}note invisible" role="form" data-id="{{_id}}" id="{{_id}}NoteBlock">
+<form class="form-horizontal hideablenotes {{name}}{{category}}note collapse" role="form" data-id="{{_id}}" id="{{_id}}NoteBlock">
     <div class="form-group">
         <p class="inputtitle{{name}}{{category}}" id="{{_id}}" value="{{title}}" data-id="{{_id}}" data-category="{{category}}" data-name="{{name}}">{{body}}</p>
     </div>
@@ -6,7 +6,7 @@
         <p class="inputbody{{name}}{{category}}" id="{{_id}}" value="{{body}}" data-id="{{_id}}" data-category="{{category}}" data-name="{{name}}">{{body}}</p>
     </div>
     <div class="btn-group">
-        <button class="btn btn-default {{name}}{{category}}delete deletenote invisible" id="{{_id}}" data-id="{{_id}}" type="button" data-category="{{category}}"
+        <button class="btn btn-default {{name}}{{category}}delete deletenote collapse" id="{{_id}}" data-id="{{_id}}" type="button" data-category="{{category}}"
             data-name="{{name}}">Delete Note
         </button>
     </div>
