--- a/views/partials/class-block.handlebars
+++ b/views/partials/class-block.handlebars
@@ -1,11 +1,11 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-4">
                 <a class="panel-title" data-toggle="collapse" data-parent="#resultsPanel" href="#{{category}}{{name}}panel">{{name}}</a>
             </div>
-            <div class="col-sm-6">
-                <ul class="breadcrumb">
+            <div class="col-sm-8">
+                <ul class="breadcrumb pull-right">
                     <li>
                         Class
                     </li>
