delete button for input fields

--- a/views/partials/newnote-block.handlebars
+++ b/views/partials/newnote-block.handlebars
@@ -1,10 +1,10 @@
 
 <form class="form-horizontal hideablenotes {{name}}{{category}}note collapse" role="form" data-id="{{_id}}">
     <div class="form-group">
-        <input type="email" class="form-control" id="inputtitle{{name}}{{category}}" placeholder="Note Title" value="{{title}}" data-id="{{_id}}"/>
+        <input type="email" class="form-control" id="inputtitle{{name}}{{category}}" placeholder="Note Title" value="" data-id="{{_id}}"/>
     </div>
     <div class="form-group">
-        <input type="email" class="form-control" id="inputtext{{name}}{{category}}" placeholder="Note Text" value="{{body}}" data-id="{{_id}}"/>
+        <input type="email" class="form-control" id="inputtext{{name}}{{category}}" placeholder="Note Text" value="" data-id="{{_id}}"/>
     </div>
 
     <div class="btn-group">
