clicking anywhere in header toggles collapsing

--- a/views/partials/class-block.handlebars
+++ b/views/partials/class-block.handlebars
@@ -1,5 +1,5 @@
 <div class="panel panel-default">
-    <div class="panel-heading">
+    <div class="panel-heading" data-toggle="collapse" href="#{{category}}{{name}}panel">
         <div class="row">
             <div class="col-sm-4">
                 <a class="panel-title" data-toggle="collapse" data-parent="#resultsPanel" href="#{{category}}{{name}}panel">{{name}}</a>
